--- a/index.html
+++ b/index.html
@@ -54,19 +54,24 @@
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
         import { getFirestore, collection, query, where, getDocs, addDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+        import { getAuth, setPersistence, browserLocalPersistence, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
         import bcrypt from "https://cdn.jsdelivr.net/npm/bcryptjs@2.4.3/+esm";
 
         const firebaseConfig = {
-            apiKey: "SUA-API-KEY",
+            apiKey: "AIzaSyDEwWz8aFhwYQzQmBmQR5YFUBd7vg5mJSk",
             authDomain: "nagocapoeira-6cae5.firebaseapp.com",
             projectId: "nagocapoeira-6cae5",
             storageBucket: "nagocapoeira-6cae5.appspot.com",
             messagingSenderId: "14626642245",
-            appId: "AIzaSyDEwWz8aFhwYQzQmBmQR5YFUBd7vg5mJSk"
+            appId: ""
         };
 
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
+        const auth = getAuth(app);
+
+        // 🔹 Garantir que o login persista no navegador
+        setPersistence(auth, browserLocalPersistence);
 
         async function hashSenha(senha) {
             const salt = await bcrypt.genSalt(10);
@@ -97,28 +102,29 @@
         });
 
         async function login(email, senhaDigitada) {
-            try {
-                const q = query(collection(db, "usuarios"), where("email", "==", email));
-                const querySnapshot = await getDocs(q);
+    try {
+        const q = query(collection(db, "usuarios"), where("email", "==", email));
+        const querySnapshot = await getDocs(q);
 
-                if (querySnapshot.empty) {
-                    alert("Usuário não encontrado.");
-                    return;
-                }
-
-                const userData = querySnapshot.docs[0].data();
-                const senhaCorreta = await bcrypt.compare(senhaDigitada, userData.senha_hash);
-
-                if (senhaCorreta) {
-                    alert("Login bem-sucedido!");
-                    window.location.href = "dashboard.html"; // 🔹 Redirecionando para dashboard
-                } else {
-                    alert("Senha incorreta.");
-                }
-            } catch (error) {
-                alert("Erro ao fazer login: " + error.message);
-            }
+        if (querySnapshot.empty) {
+            alert("Usuário não encontrado.");
+            return;
         }
+
+        const userData = querySnapshot.docs[0].data();
+        const senhaCorreta = await bcrypt.compare(senhaDigitada, userData.senha_hash);
+
+        if (senhaCorreta) {
+            alert("Login bem-sucedido!");
+            window.location.href = "dashboard.html"; // 🔹 Redirecionando para dashboard
+        } else {
+            alert("Senha incorreta.");
+        }
+    } catch (error) {
+        alert("Erro ao fazer login: " + error.message);
+    }
+}
+
 
         document.getElementById("login-form").addEventListener("submit", function(event) {
             event.preventDefault();
