--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
             <input type="text" id="nome" placeholder="Digite seu nome" required>
             <input type="email" id="email" placeholder="Digite seu e-mail" required>
             <input type="password" id="senha" placeholder="Digite sua senha" required>
+
+            <!-- 🔹 Novo campo: Seleção de Nível de Acesso -->
+            <label for="nivel">Nível de Acesso:</label>
+            <select id="nivel">
+                <option value="Aluno" selected>Aluno</option>
+                <option value="Monitor">Monitor</option>
+                <option value="Professor">Professor</option>
+                <option value="Mestre">Mestre</option>
+            </select>
+
             <button type="submit">Cadastrar</button>
         </form>
     </section>
