totalizador para alunos

--- a/dashboard.html
+++ b/dashboard.html
@@ -49,6 +49,13 @@
                 </tbody>
             </table>
         </div>
+                <!-- 🔹 INÍCIO DA ALTERAÇÃO - Adicionado em 13/03/2025 às 21:35:00 -->
+                <div id="total-pago-container">
+                    <h3>Total Pago: <span id="total-pago">R$ 0,00</span></h3>
+                    <p id="pagamentos-pendentes"></p>
+                </div>
+                <!-- 🔹 FIM DA ALTERAÇÃO - Adicionado em 13/03/2025 às 21:35:00 -->
+        
     </section>
     
 
