totalizadores da tela gestao

--- a/gestao.html
+++ b/gestao.html
@@ -53,6 +53,16 @@
                 <tbody id="tabela-pagamentos-body">
                     <tr><td colspan="6">Carregando...</td></tr>
                 </tbody>
+                    <!-- 🔹 INÍCIO DA ALTERAÇÃO - Adicionado em 14/03/2025 às 10:30:00 -->
+                    <tfoot>
+                        <tr>
+                            <td colspan="3"><strong>Total do Aluno:</strong></td>
+                            <td><strong id="total-pago-aluno">R$ 0,00</strong></td>
+                            <td><strong id="total-pendente-aluno">R$ 0,00</strong></td>
+                            <td></td>
+                        </tr>
+                    </tfoot>
+                    <!-- 🔹 FIM DA ALTERAÇÃO - Adicionado em 14/03/2025 às 10:30:00 -->
             </table>
         </div>
     </section>
