Atualização do botão de registro e melhorias na exibição de pagamentos

--- a/index.html
+++ b/index.html
@@ -3,6 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login - Capoeira</title>
+    <style>
+        body {
+            background: url('background-capoeira.jpg') no-repeat center center fixed;
+            background-size: cover;
+            font-family: 'Arial', sans-serif;
+            text-align: center;
+            color: #fff;
+        }
+        .login-container {
+            background: rgba(0, 0, 0, 0.7);
+            border-radius: 15px;
+            padding: 30px;
+            width: 350px;
+            margin: 100px auto;
+            box-shadow: 0 4px 10px rgba(255, 255, 255, 0.2);
+        }
+        h1 {
+            color: #FFD700;
+        }
+        input {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border-radius: 5px;
+            border: none;
+            font-size: 1em;
+        }
+        .login-btn {
+            background: #009739;
+            color: white;
+            font-size: 1em;
+            padding: 12px;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: background 0.3s, transform 0.2s;
+            width: 100%;
+        }
+        .login-btn:hover {
+            background: #FFD700;
+            color: black;
+            transform: scale(1.05);
+        }
+    </style>
+</head>
+<body>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nago Capoeira Campina Grande</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -22,11 +76,7 @@
     </header>
 
     <!-- 🔹 Seção de Introdução -->
-    <section id="hero">
-        <h2>Bem-vindo ao Nago Capoeira Campina Grande</h2>
-        <p>Tradição, cultura e movimento para todas as idades.</p>
-        <a href="#" id="abrir-login" class="btn">Acesse a Área do Aluno</a>
-    </section>
+
 
     <!-- 🔹 Ícone de Cadastro -->
     <div id="cadastro-icon"></div>
