--- a/dashboard.html
+++ b/dashboard.html
@@ -106,7 +106,7 @@
         <div id="calendar-container">
             <div id="calendar-header">
                 <button id="prev-month">◀</button>
-                <h3 id="month-year">Carregando...</h3>
+                <span id="titulo-mes">Carregando...</span>
                 <button id="next-month">▶</button>
             </div>
             <div id="calendar-grid"></div>
