--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
             <input type="text" id="nome" placeholder="Digite seu nome" required>
             <input type="email" id="email-cadastro" placeholder="Digite seu e-mail" required>
             <input type="password" id="senha-cadastro" placeholder="Digite sua senha" required>
+
+            <!-- ✅ Campos de acessos padrão já cadastrados -->
+            <label><input type="checkbox" id="acesso-gestao" checked disabled> Acesso à Gestão (será configurado após aprovação)</label><br>
+            <label><input type="checkbox" id="acesso-financeiro" checked disabled> Acesso Financeiro (será configurado após aprovação)</label><br>
+
             <button type="submit">Cadastrar</button>
         </form>
     </div>
@@ -55,116 +60,6 @@
     </footer>
 
     <!-- 🔹 Scripts -->
-    <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-        import { getFirestore, collection, query, where, getDocs, addDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
-        import { getAuth, setPersistence, browserLocalPersistence, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-        import bcrypt from "https://cdn.jsdelivr.net/npm/bcryptjs@2.4.3/+esm";
-
-        // 🔹 Configuração do Firebase
-        const firebaseConfig = {
-            apiKey: "AIzaSyDEwWz8aFhwYQzQmBmQR5YFUBd7vg5mJSk",
-            authDomain: "nagocapoeira-6cae5.firebaseapp.com",
-            projectId: "nagocapoeira-6cae5",
-            storageBucket: "nagocapoeira-6cae5.appspot.com",
-            messagingSenderId: "14626642245",
-            appId: ""
-        };
-
-        const app = initializeApp(firebaseConfig);
-        const db = getFirestore(app);
-        const auth = getAuth(app);
-
-        // 🔹 Garantir persistência do login
-        setPersistence(auth, browserLocalPersistence);
-
-        // 🔹 Função para Hash de Senha
-        async function hashSenha(senha) {
-            const salt = await bcrypt.genSalt(10);
-            return await bcrypt.hash(senha, salt);
-        }
-
-        // 🔹 Função para Cadastro de Usuário
-        async function cadastrarUsuario(nome, email, senha) {
-            try {
-                const senhaCriptografada = await hashSenha(senha);
-                await addDoc(collection(db, "usuarios"), {
-                    nome: nome,
-                    email: email,
-                    senha_hash: senhaCriptografada
-                });
-
-                alert("Usuário cadastrado com sucesso!");
-                document.getElementById("cadastro-container").style.display = "none";
-                document.getElementById("login-form").style.display = "block";
-            } catch (error) {
-                alert("Erro ao cadastrar usuário: " + error.message);
-            }
-        }
-
-        // 🔹 Evento de Cadastro
-        document.getElementById("cadastro-form").addEventListener("submit", function(event) {
-            event.preventDefault();
-            const nome = document.getElementById("nome").value;
-            const email = document.getElementById("email-cadastro").value;
-            const senha = document.getElementById("senha-cadastro").value;
-            cadastrarUsuario(nome, email, senha);
-        });
-
-        // 🔹 Função para Login
-        async function login(email, senhaDigitada) {
-            try {
-                const q = query(collection(db, "usuarios"), where("email", "==", email));
-                const querySnapshot = await getDocs(q);
-
-                if (querySnapshot.empty) {
-                    alert("Usuário não encontrado.");
-                    return;
-                }
-
-                const userDoc = querySnapshot.docs[0];
-                const userData = userDoc.data();
-
-                const senhaCorreta = await bcrypt.compare(senhaDigitada, userData.senha_hash);
-
-                if (senhaCorreta) {
-                    alert("Login bem-sucedido!");
-                    localStorage.setItem("usuarioLogado", JSON.stringify({
-                        uid: userDoc.id,
-                        nome: userData.nome,
-                        email: userData.email
-                    }));
-                    window.location.href = "dashboard.html";
-                } else {
-                    alert("Senha incorreta.");
-                }
-            } catch (error) {
-                alert("Erro ao fazer login: " + error.message);
-            }
-        }
-
-        // 🔹 Corrigido: Evento para Submissão do Login
-        document.getElementById("login-form").addEventListener("submit", function(event) {
-            event.preventDefault();
-            const email = document.getElementById("email-login").value;
-            const senha = document.getElementById("senha-login").value;
-            login(email, senha);
-        });
-
-        // 🔹 Exibir formulário de cadastro ao clicar no botão de cadastro
-        document.getElementById("cadastro-botao").addEventListener("click", function(event) {
-            event.preventDefault();
-            document.getElementById("login-form").style.display = "none";
-            document.getElementById("cadastro-container").style.display = "block";
-        });
-
-        // 🔹 Fechar formulário de cadastro e voltar ao login
-        document.getElementById("fechar-cadastro").addEventListener("click", function() {
-            document.getElementById("cadastro-container").style.display = "none";
-            document.getElementById("login-form").style.display = "block";
-        });
-
-    </script>
-
+    <script type="module" src="login.js"></script>
 </body>
 </html>
